2006-07-09  Titus Brown  <t@issola.caltech.edu>

	* Updated gather code to properly deal with lexical ordering in
	  directory hierarchies.

	* Finished fixing up the HTML processing code to the latest mechanize.

2006-07-07  Titus Brown  <t@issola.caltech.edu>

	* added newline '\n' processing in arguments.  still need to test.

	* added utils.gather_files to gather script files from subdirectories.

2006-06-19  Titus Brown  <t@issola.caltech.edu>

	* Fixed name server change in test-dns.twill.

	* Fixed __match__ info in docs.

2006-06-04  Titus Brown  <t@issola.caltech.edu>

	* RELEASE 0.8.5.

2006-05-19  Titus Brown  <t@issola.caltech.edu>

	* Added 'formfill' extension module, tests, & docs. (Ben Bangert)

	* 'debug' now takes boolean (+/-) arguments, too.

2006-05-17  Titus Brown  <t@issola.caltech.edu>

	* Bumped version number.

	* Explicitly str-ified form/field names.  (Sebastien Pierre)

	* Added path mangling issue to 'known problems'.

	* Modified 'extend_with' import command to also print out
	  location of imported module.

	* Fixed unnecessary path mangling that introduced the package
	  directory into sys.path; associated check_links idiocy.
	  (Herve Cauwelier)

	* Fixed test breakage due to amazon.com DNS changes.

2006-05-15  Titus Brown  <t@issola.caltech.edu>

	* Bumped version number, fixed import order issue.

2006-05-11  Titus Brown  <t@issola.caltech.edu>

	* Added 'check_links' collecting behavior, 'report_bad_links' function.

	* Added debug logging to csv_iterate.

2006-05-08  Titus Brown  <t@issola.caltech.edu>

	* Added dirstack extension module

2006-05-07  Titus Brown  <t@issola.caltech.edu>

	* Fixed general https problem ('back' didn't work because the
	  response fp was 'close'd but not wrapped in addinfourl for
	  HTTPS URLs).  (re ARINC)

	* Fixed check_links problem with 'https:' URLs, refactored a tad.
	  (re ARINC)

	* Fixed wsgi_intercept generator problem, added test.

	* Fixed a reference to an absolute URL in the tests.
